--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
   <header class="masthead mb-auto">
     <div class="inner">
-      <h3 class="masthead-brand">Sriram PK</h3>
+      <h3 class="masthead-band">Sriram PK</h3>
       <nav class="nav nav-masthead justify-content-center">
         <!--<a class="nav-link active" href="#">Home</a>
         <a class="nav-link" href="#">Features</a>
