--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
     <h1 class="cover-heading">Designer for life</h1>
     <p class="lead">Designing at Apple now</p>
     <p class="lead">
-      <a href="#" class="btn btn-lg btn-secondary">Resume</a>
+      <a href="#" class="btn btn-md btn-secondary">Resume</a>
     </p>
   </main>
 
   <footer class="mastfoot mt-auto">
     <div class="inner">
-      <p>Cover template for <a href="https://getbootstrap.com/">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
+      <p>Credits to those awesome people at Twitter Bootstrap</p>
     </div>
   </footer>
 </div>
