--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <h1 class="cover-heading">Designer for life</h1>
     <p class="lead">Designing at Apple now</p>
     <p class="lead">
-      <a href="#" class="btn btn-md btn-secondary">Resume</a>
+      <a href="resume.pdf" class="btn btn-md btn-secondary">Resume</a>
     </p>
   </main>
 
