--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   </header>
 
   <main role="main" class="inner cover">
-    <h1 class="cover-heading">Designer for life</h1>
+    <h1 class="cover-heading">Designer. Period.</h1>
     <p class="lead">Designing at Apple now</p>
     <p class="lead">
       <a href="resume.pdf" class="btn btn-md btn-secondary">Resume</a>
