--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
   <header class="masthead mb-auto">
     <div class="inner">
-      <h3 class="masthead-band">Sriram PK</h3>
+      
       <nav class="nav nav-masthead justify-content-center">
         <!--<a class="nav-link active" href="#">Home</a>
         <a class="nav-link" href="#">Features</a>
@@ -48,6 +48,7 @@
   </header>
 
   <main role="main" class="inner cover">
+    <h4 class="masthead-band">Hello, My name is Ram. I am a designer in California</h4>
     <h1 class="cover-heading">Designer. Period.</h1>
     <p class="lead">Designing at Apple now</p>
     <p class="lead">
@@ -57,7 +58,7 @@
 
   <footer class="mastfoot mt-auto">
     <div class="inner">
-      <p>Credits to those awesome people at Twitter Bootstrap</p>
+      <p></p>
     </div>
   </footer>
 </div>
