--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   </header>
 
   <main role="main" class="inner cover">
-    <h2 class="masthead-band">Hello, My name is <span class="colored-text">Ram.</span> I am a designer in California</h2>
+    <h2 class="masthead-band">Hello, My name is <span class="colored-text">Sriram.</span> I am a designer in California</h2>
     
     <p class="lead">Designing at Apple now</p>
     <p class="lead">
