--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
             <div class="feature-col-left ">
                 <div class="feature-col-inner ">
                     <div class="text-content-features">
-                        <h2>Recent Work Experience</h2>
+                        <h2>Work Experience</h2>
 
                        
 
@@ -403,11 +403,11 @@
 
                             <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 ">
 
-                                <div class="row ">
+                                <div class="row" id="row1">
 
                                     <div class="col-lg-6 col-md-4 col-sm-6 col-xs-12 ">
 
-                                        <h5>Menu </h5>
+                                        <h5>Menu</h5>
 
                                         <ul class="list-menu ">
 
