--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@
 
           </button>
 
-                    <!-- Logo -->
+                    <!-- Logo
 
                     <a class="navbar-brand logo" href="">
             <img src="assets/images/logo-whit.png"  alt="" title="">
-          </a>
+          </a>  -->
                 </div>
 
                 <!--Links Menu
@@ -162,7 +162,7 @@
                         </div>-->
 
                         <div class="arrow-down-btn bounce" id="explore">
-                            <a href="#about " class="section-scroll">  <i class="arrow_carrot-down"></i>  </a>
+                            <a id="#about" class="section-scroll">  <i class="arrow_carrot-down"></i>  </a>
 
                         </div>
 
