New font and center align

--- a/index.html
+++ b/index.html
@@ -160,10 +160,11 @@
                             <button href="#about " class="section-scroll btn btn-colored">View Projects</button>
 
                         </div>-->
-
-                        <div class="arrow-down-btn bounce" id="explore">
+                        <div id="explore">
+                        <div class="arrow-down-btn bounce">
                             <a href="#about" id="about" class="section-scroll">  <i class="arrow_carrot-down"></i>  </a>
 
+                        </div>
                         </div>
 
                     </div>
