--- a/index.html
+++ b/index.html
@@ -145,9 +145,9 @@
     
         <div class="section-hero-inner ">
             <div class="section-hero-content clearfix ">
-                <div class="content-col-left ">
+                <div class="container">
 
-                    <div class="content-col-inner ">
+                    <div class="row">
                         <div class="hero-text ">
                             <h1><img src="assets/images/logo1.svg"></h1>
 
@@ -160,14 +160,15 @@
                             <button href="#about " class="section-scroll btn btn-colored">View Projects</button>
 
                         </div>-->
-                        <div id="explore">
+                        
+
+                    </div>
+                    <div id="explore">
                         <div class="arrow-down-btn bounce">
                             <a href="#about" id="about" class="section-scroll">  <i class="arrow_carrot-down"></i>  </a>
 
                         </div>
                         </div>
-
-                    </div>
                 </div>
                 <div class="content-col-right ">
                     <div class="content-col-image ">
@@ -288,8 +289,9 @@
                     <h3>Hello 👋🏻</h3>
                     <p>
                         I'm Sriram. I'm a UX/UI Designer with a Bachelors degree in Computer Science & a Masters in Human-Computer Interaction.</p>
-                    <p class="mg-bt-30 ">I currently live in California but originally from TamilNadu, India</p>
-                    <a href=" " class="btn btn-color ">Learn more</a>
+                    <p class="mg-bt-30 ">I live in California but originally from TamilNadu, India</p>
+                    <p class="mg-bt-30 ">I'm actively seeking full-time UX Designer positions.</p>
+                    <a href="mailto:srirampkay@gmail.com" class="btn btn-color ">Email me</a>
                 </div>
 
             </div>
