--- a/work-at-apple.html
+++ b/work-at-apple.html
@@ -136,10 +136,10 @@
 
                         <div class=" col-xs-12">
                             <div class="text-center">
-                                <h1>Pobyt</h1>
+                                <h1>Apple</h1>
 
-                                <h2 class="subtitle">Short stays made simple</h2>
-                                <img class="img1" src="assets/images/pobyt-cover.png" style="margin: 5%;">
+                                <h2 class="subtitle">UX Designer</h2>
+                                <img class="img1" src="assets/images/blog3.jpg" style="margin: 5%;">
                             </div>
 
                         </div>
@@ -164,11 +164,9 @@
                 <div class="row">
                     <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
                         <div class="blog-text text-left">
-                            <h3 class="titled">About the project</h3>
+                            <h3 class="titled">Nature of work</h3>
                             <p>
-                                Pobyt is a new-age tech startup that allows hotel reservation for short stays during the day. I was brought into this project from its early stages. The idea is simple. It is like every other room booking app in the market. 
-                                The challenge was to make the flow simple to allow users book on-demand reservations.
-
+                                
                             </p>
 
                             
