new content and timestamp update

--- a/work-at-apple.html
+++ b/work-at-apple.html
@@ -192,7 +192,7 @@
                                     <li>
                                         <a href="" class="clearfix">
 
-                                        <span class="pull-left">Product Design</span>
+                                        <span class="pull-left">UI/UX Design</span>
                                   </a>
 
                                     </li>
@@ -211,7 +211,7 @@
                                     <li>
                                         <a href="" class="clearfix">
 
-                                        <span class="pull-left">June 2017-Present</span>
+                                        <span class="pull-left">September 2018-Present</span>
                                   </a>
 
                                     </li>
@@ -230,7 +230,7 @@
                                     <li>
                                         <a href="" class="clearfix">
 
-                                        <span class="pull-left">iOS, Android</span>
+                                        <span class="pull-left">Web, iOS</span>
                                   </a>
 
                                     </li>
@@ -248,9 +248,9 @@
                     </div>
                     <div class="col-lg-12 col-md-8 col-sm-8 col-xs-12">
                         <div class="blog-text text-left">
-                            <h3 class="titled">About the project</h3>
+                            <h3 class="titled">About my work</h3>
                             <p>
-                                    Holachef is a food-tech startup which curates chefs around mumbai and delivers food cooked from them online. Everyday there is a change in menu and compostion of the cuisine. Being a product designer, I was responsible for designing multiple products that catered to the user and ones which also helped the process of the business easier.
+                                    My contract with Apple prohibits me from disclosing any proprietary information, technical data, trade secrets or know-how, including research, product plans and designs.... So pretty much everything.
                             </p>
     
                             <br/>
