--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
                         <h3>My work at Apple</h3><br/>
                         <p>My contract with Apple prohibits me from disclosing any proprietary information, technical data, trade secrets or know-how, including research, product plans and designs.... 
                             <br/><br/>
-                            So, I can't disclose pretty much everything!<br/><br/>
+                            So, I can't disclose pretty much anything!<br/><br/>
                         I can still talk about the tools I use, the design process I follow, the design standards I try to keep.</p>
                        
              
