--- a/index.html
+++ b/index.html
@@ -556,7 +556,9 @@
                                             <li>
                                                 <a href="#about" class="section-scroll">Work</a>
                                             </li>
-
+                                            <li>
+                                                <a href="https://drive.google.com/open?id=1FddE5mI56CpeZdkqN5O-BXzXZnv1C1HA" target="_blank" class="section-scroll">Download Resume</a>
+                                            </li>
                                             
 
                                            
