--- a/index.html
+++ b/index.html
@@ -228,7 +228,13 @@
                             <h2>About me</h2>
                             <h3>Hello 👋🏻</h3>
                             <p id="aboutme">
-                                I'm Sriram. I'm a UI/UX Designer with a Bachelors degree in Computer Science & a Masters degree in Human-Computer Interaction.<br/><br/>I like solving design problems and creating amazing user experiences through research, qunantitative data and my intuition as a designer. </p>
+                                I'm Sriram. I'm a UI/UX Designer with a Bachelors degree in Computer Science & a Masters degree in Human-Computer Interaction.<br/><br/>I like solving design problems and creating delightful user
+                                experiences through research, qunantitative data and my
+                                intuition as a designer. I like learning how people think and
+                                behave, and I leverage research to design user-centered
+                                products and experiences which solve both user and
+                                business problems. </p>
+                                <p>My process is hands-on, collaborative, and iterative.</p>
                             <p class="mg-bt-30 "></p>
                             <a href="#work" class="btn btn-color section-scroll">View Projects</a>
                         </div>
