--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
     
                     <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                     
-                        <div class="text-content ">
+                        <div class="text-content">
                             <h2>About me</h2>
                             <h3>Hello 👋🏻</h3>
                             <p id="aboutme">
@@ -233,8 +233,7 @@
                                 intuition as a designer. I like learning how people think and
                                 behave, and I leverage research to design user-centered
                                 products and experiences which solve both user and
-                                business problems. </p>
-                                <p>My process is hands-on, collaborative, and iterative.</p>
+                                business problems. <br/><br/>My process is hands-on, collaborative, and iterative.</p>
                             <p class="mg-bt-30 "></p>
                             <a href="#work" class="btn btn-color section-scroll">View Projects</a>
                         </div>
@@ -399,7 +398,7 @@
                                     <p>PREVIOUS</p>
                                 </div>
                                 <div class="col-lg-10 col-md-4 col-sm-4 col-xs-8">
-                                    <p>• UI/UX Designer at Monigle | Brand Experience Agency • Brand Strategy • Denver &amp; New York</p>
+                                    <p>• UI/UX Designer at Monigle | Brand Experience Agency • Denver, New York</p>
                                     <p>• Product Designer at Pobyt | Short Stays • Simplified</p>
                                     <p>• UX Designer at S&P Global Market Intelligence</p>
                                     <p>• UX Designer at Cashkumar | Peer to Peer Money Lending in India</p>
