--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                         </z>
                     </div>
 
-                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 wow fadeInUp " id="work-box"  data-toggle="modal" data-target="#login-modal">
+                    <!--<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 wow fadeInUp " id="work-box"  data-toggle="modal" data-target="#login-modal">
                             <a href="interaction.html">
                             <div class="icon-block "  id="work-img">
     
@@ -336,7 +336,7 @@
                                 <p class="prodesc">A glimpse of some interactions that derived from whiteboard designs. 
                                 </p>
                             </a>
-                        </div>
+                        </div> -->
 
                     </div>
 
