--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@
                                                 <a href="#about" class="section-scroll">Work</a>
                                             </li>
                                             <li>
-                                                <a href="https://drive.google.com/open?id=1FddE5mI56CpeZdkqN5O-BXzXZnv1C1HA" target="_blank" class="section-scroll">Download Resume</a>
+                                                <a href="https://drive.google.com/file/d/13mMYxfTa4yd28RF74Gu7ruQB4QvfzXbP/view?usp=sharing" target="_blank" class="section-scroll">Download Resume</a>
                                             </li>
                                             
 
