--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Stribe Landing page Template">
+    <meta name="description" content="UX Portfolio | Sriram PK">
     <title>UX Portfolio</title>
 
     <!--External Stylesheets css-->
@@ -163,7 +163,7 @@
                         <div class="hero-text ">
                             <h1><img src="assets/images/logo1.svg"></h1>
 
-                            <p>UI/UX Designer at Apple.</p>
+                            <p>I research, design, learn and iterate.</p>
                             <!--<a href="#" class="btn btn-colored ">Resume</a>-->
                              
                             
