--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@
     <section id="home" class="section-hero bg-color-1 ">
 
 
-        <a class="navbar-brand logo" href="">
+        <!--<a class="navbar-brand logo" href="">
             <img src="assets/images/logo-whit.png"  alt="" title="">
-          </a>
+          </a>-->
     
         <div class="section-hero-inner ">
             <div class="section-hero-content clearfix ">
@@ -152,7 +152,7 @@
 
                     </div>
                 </div>
-                <div class="content-col-right ">
+                 <!--<div class="content-col-right ">
                     <div class="content-col-image ">
                         <figure class="image ">
                             <img src="assets/images/imag.png " alt="">
@@ -161,7 +161,7 @@
                         </figure>
 
                     </div>
-                </div>
+                </div>-->
 
 
             </div>
