--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
 
           </button>
 
-                    <!-- Logo -->
+                    <!-- Logo 
 
                     <a class="navbar-brand logo" href="">
             <img src="assets/images/logo-whit.png"  alt="" title="">
-          </a>
+          </a>-->
                 </div>
 
                 
