--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
     
         <div class="section-hero-inner ">
             <div class="section-hero-content clearfix ">
-                <div class="content-col-left ">
+                <div class="content-col-head ">
 
-                    <div class="content-col-inner ">
+                    <div class="content-inner ">
                         <div class="hero-text ">
 
                                 <h1 class="head-text">Hello, My name is Ram.<!--<img src="assets/images/logo1.svg">--></h1>
@@ -141,7 +141,7 @@
                              
                         </div>
                        <div class="head-text">
-                           <p>I am currently finishing up this website, where I would like to showcase my work. Meanwhile you can take a look at the page for projects you may find.</p>
+                           <p>I am currently finishing up this website, where I would like to showcase my work. <br/>Meanwhile you can take a look at the page for projects you may find.</p>
                        </div>
                         <div class="hero-text arrow-down-btn bounce" id="hero-text1">
                             <a href="#about-app" class="section-scroll">  <i style="margin-left: -15px;" class="arrow_down bounce"></i>  </a>
