--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
 
 <head>
+
+        <style>
+                @import url('https://fonts.googleapis.com/css?family=Lato:400,700&display=swap');
+                </style>
     <!--Metas-->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -136,7 +140,7 @@
                     <div class="content-inner ">
                         <div class="hero-text ">
 
-                                <h1 class="head-text">Hello, My name is Ram.<!--<img src="assets/images/logo1.svg">--></h1>
+                                <h1 class="head-text" style="font-family: Lato;">Hello, My name is Ram.<!--<img src="assets/images/logo1.svg">--></h1>
                             <p class="head-subtitle">I am a Designer in California.</p>
                            <p class="head-subbtitle">Designing at Apple now.</p>
                              <!--<a href="#about-app" class="btn btn-colored section-scroll">View more</a>-->
