--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     
         <div class="section-hero-inner ">
             <div class="section-hero-content clearfix ">
-                <div class="content-col-head ">
+                <div class="container">
 
                     <div class="content-inner ">
                         <div class="hero-text ">
