--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                              
                         </div>
                        <div class="head-text">
-                           <p>I am currently finishing up this website, where I would like to showcase my work. <br/>Meanwhile you can take a look at the page for projects you may find.</p>
+                           <p>I am currently finishing up this website, where I would like to showcase my work. <br/>Meanwhile you can take a look at my finished projects.</p>
                        </div>
                         <div class="hero-text arrow-down-btn bounce" id="hero-text1">
                             <a href="#about-app" class="section-scroll">  <i style="margin-left: -15px;" class="arrow_down bounce"></i>  </a>
@@ -582,7 +582,7 @@
                             <!-- COPYRIGHT TEXT -->
 
                             <div class="copyright ">
-                                <p>Last updated August 8, 2019.</p>
+                                <p>Last updated August 9, 2019.</p>
                             </div>
                             <!-- COPYRIGHT TEXT -->
 
