--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                     <div class="content-inner ">
                         <div class="hero-text ">
 
-                                <h1 class="head-text" style="font-family: Lato;">Hello, My name is Ram.<!--<img src="assets/images/logo1.svg">--></h1>
+                                <h1 class="head-text" style="font-family: Lato;">Hello, my name is Sriram.<!--<img src="assets/images/logo1.svg">--></h1>
                             <p class="head-subtitle">I am a Designer in California.</p>
                            <p class="head-subbtitle">Designing at Apple now.</p>
                              <!--<a href="#about-app" class="btn btn-colored section-scroll">View more</a>-->
@@ -202,7 +202,7 @@
                                 <h3>Hello 👋🏻</h3>
                                 <p id="aboutme">
                                     I'm Sriram. I'm a UI/UX Designer with a Bachelors degree in Computer Science & a Masters degree in Human-Computer Interaction.<br/><br/>I like solving design problems and creating delightful user
-                                    experiences through research, qunantitative data and my
+                                    experiences through research, quantitative data and my
                                     intuition as a designer. I like learning how people think and
                                     behave, and I leverage research to design user-centered
                                     products and experiences which solve both user and
@@ -600,14 +600,14 @@
 
     <!--Footer -->
 
-    <!--Modal login -->
+    <!--Modal login 
 
     <div class="modal fade login-modal" id="login-modal" tabindex="-1" role="dialog" aria-labelledby="loginModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
                     <h3>User Login</h3>
-                    <span>Click To Login to strat trial</span>
+                    <span>Click To Login to start trial</span>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -648,7 +648,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <!--Modal login -->
 
