--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
                                         <ul class="list-menu ">
 
                                             <li>
-                                                <a href="www.twitter.com/srirampk23">Twitter</a>
+                                                <a target="_blank" href="www.twitter.com/srirampk23">Twitter</a>
                                             </li>
 
                                             <li>
