--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Stribe Landing page Template">
+    <meta name="description" content="UX Design Portfolio">
     <title>UX Portfolio</title>
 
     <!--External Stylesheets css-->
@@ -201,7 +201,7 @@
                                 <h2>About me</h2>
                                 <h3>Hello 👋🏻</h3>
                                 <p id="aboutme">
-                                    I'm Sriram. I'm a UI/UX Designer with a Bachelors degree in Computer Science & a Masters degree in Human-Computer Interaction.<br/><br/>I like solving design problems and creating delightful user
+                                    I'm Sriram. I'm a UI/UX Designer with a Masters degree in Human-Computer Interaction.<br/><br/>I like solving design problems and creating delightful user
                                     experiences through research, quantitative data and my
                                     intuition as a designer. I like learning how people think and
                                     behave, and I leverage research to design user-centered
@@ -215,6 +215,7 @@
                         </div>
                         
                     </div>
+                    <br/>
                     <div class="container ">
                         <div class="row sponsors">
                             <div class="client-caroussel ">
