--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
                     <div class="pd-tp-50 clearfix " >
                     
                         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 wow fadeInUp " id="work-box"  data-toggle="modal" data-target="#login-modal">
-                            <a href="expiry.html">
+                            <a href="#">
                             <div class="icon-block "  id="work-img">
     
                                     <img id="imgs" src="assets/images/group4.svg">
