--- a/expiry.html
+++ b/expiry.html
@@ -168,7 +168,7 @@
                         <div class="blog-text text-left">
                             <h3 class="titled">Problem Statement</h3>
                             <p>
-                                    Expiry has been operating under a “mystery box” subscription that lets users set
+                                    Expiry has been operating under a mystery box monthly subscription that lets users set
                                     their preferences (e.g. number of people, vegan, only produce) and allows them to
                                     place an order before noon for evening delivery.
                                     <br/><br/>
