--- a/expiry.html
+++ b/expiry.html
@@ -173,7 +173,7 @@
                                     place an order before noon for evening delivery.
                                     <br/><br/>
                                     Recently, Expiry has been losing customers. After doing user research, it turned
-                                    out the customers want more control over their orders.<br/><br/>
+                                    out the customers want more control over their service.<br/><br/>
                                     <b>My task was to design an experience that allows customers to easily place same-day orders from a dynamic, limited supply of food.</b>
                                 <br/>
                                 
@@ -208,11 +208,11 @@
                                 <h3 class="titled">Existing problems</h3>
                                 <p> So, Customers feel they don't have enough control over their orders.
                                     This could mean:<br/>
-                                    <h4>1. Customers may not always get the food they like</h4>
-                                    <p>Existing design doesn't let users pick their food. It only asks for preferences like Vegan or Vegetarian. This could result in upsetting customers during delivery. <br/>Eg. <i>Customer expects a "Vegan Salad" but gets "Vegan Sushi" instead.</i></p>
-                                    <h4>2. Exclude allergies</h4>
+                                    <h4>1. Customers are getting the food they don't like</h4>
+                                    <p>Existing design doesn't let users pick their food. It only asks for preferences like Vegan or Vegetarian. This could result in upsetting customers during delivery. <br/>Eg. <i>Customer who doesn't like Sushi,  gets Sushi in their mystery box.</i></p>
+                                    <h4>2. Customers get food they are allergic to</h4>
                                     <p>Existing design doesn't ask for any specific food alergies before placing an order. This could result in delivery of food that the customer may be allergic to. <br/>Eg. <i>A customer who is lactose intolerant gets a cheese pizza.</i></p>
-                                    <h4>3. No tracking options available</h4>
+                                    <h4>3. Food gets delivered at the doorstep</h4>
                                     <p>Existing design doesn't let users track their food. This could result in food left at the user's doorstep. If not notified, it could remain there for hours.</p>
                                     <h4>4. "Change of plans" for the customer</h4>
                                     <p>Due to unforseen reasons, the customer needs to change his plans for the evening. The current design doesn't let subscribers "pause" or "skip" delivery for that day. This could result in more food wastage and loss for the customer. <br/>Eg:<i>The customer gets invited to a birthday party for the evening and he/she needs to cancel delivery for that day</i>
