All  new changes

--- a/pobyt.html
+++ b/pobyt.html
@@ -142,10 +142,16 @@
                                 <div class="col-lg-12 col-md-8 col-sm-8 col-xs-12 blog-text">   
                                 <h3 class="titled">Overview</h3>
                                 <p>Pobyt is a tech startup based in India that allows hotel reservation for short stays. I worked as a Product Designer with Pobyt for over 2 years. When I took charge, Pobyt was plagued with inconsistent ux patterns, poor visuals and too much information that caused confusion for its users. Below is a case study that explains the redesign process.</p>
-                            <div class="view-case">
-                                    <img class="blog-image" src="assets/images/finished pobyt.png">
-                                <a href="#about-project"  class="btn btn-color section-scroll">View Case Study</a>
-                            </div>
+
+                                <div class="view-case">
+                                   
+                                        <a href="#about-project"  class="btn btn-color section-scroll">View Case Study</a>
+                                    </div><br/>
+                                    <h3 class="titled">Final design</h3>
+                                    <div class="view-case">
+                                            <img class="blog-image" src="assets/images/finished pobyt.png">
+                                       
+                                    </div>
                             </div>
                             </div>
             </div>
