--- a/expiry.html
+++ b/expiry.html
@@ -266,7 +266,7 @@
     
                                 
 
-                                <h3 class="titled">Brainstorming solutions to Critical User Problems</h3><br/>
+                                <h3 class="titled">How might we</h3><br/>
                                 <a id="prob">Problem: 1. Customers are unhappy with the food they receive</a><br/> <br/>
                                 <sol>Solution 1: Give users control over food selection<br/>Solution 2: Allow users to Specify food allergies to avoid
                                     </sol>
