--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                         <div class="hero-text ">
 
                                 <h1 class="head-text" style="font-family: Lato;">Hello, my name is Sriram.<!--<img src="assets/images/logo1.svg">--></h1>
-                            <p class="head-subtitle">I am a Designer in California.</p>
+                            <p class="head-subtitle">I am a UI/UX Designer in California.</p>
                            <p class="head-subbtitle">Designing at Apple now.</p>
                              <!--<a href="#about-app" class="btn btn-colored section-scroll">View more</a>-->
                              
