--- a/pobyt.html
+++ b/pobyt.html
@@ -315,7 +315,15 @@
 
                             <h3 class="titled">Final design</h3>
                             <div class="view-case">
-                                    <img class="blog-image" src="assets/images/finished pobyt.png">
+                                    <img class="blog-image" id="no-shadows" src="assets/images/finished pobyt.png">
+                               
+                            </div>
+
+                            <hr class="hr">
+
+                            <h3 class="titled">Measure</h3>
+                            <div class="view-case">
+                                    <img class="blog-image" id="no-shadows" src="assets/images/pobyt-measure.png">
                                
                             </div>
 
