--- a/index.html
+++ b/index.html
@@ -438,10 +438,10 @@
                                         <p>PREVIOUS</p>
                                     </div>
                                     <div class="col-lg-10 col-md-4 col-sm-4 col-xs-8">
-                                        <p>• UI/UX Designer at Monigle |  Denver</p>
+                                        <p>• UI/UX Designer at Monigle |  Denver, Colorado</p>
                                         <p>• Product Designer at Pobyt | Remote</p>
-                                        <p>• UX Designer at S&P Global Market Intelligence | Hyderabad</p>
-                                        <p>• UX Designer at Cashkumar | Peer to Peer Money Lending in India | Bengaluru</p>
+                                        <p>• UX Designer at S&P Global Market Intelligence | Hyderabad, India</p>
+                                        <p>• UX Designer at Cashkumar | Peer to Peer Money Lending in India | Bengaluru, India</p>
                                     </div>
                                 </div>
                             </ul>   
