--- a/pobyt.html
+++ b/pobyt.html
@@ -141,7 +141,7 @@
                         <div class="row">
                                 <div class="col-lg-12 col-md-8 col-sm-8 col-xs-12 blog-text">   
                                 <h3 class="titled">Overview</h3>
-                                <p>Pobyt is a tech startup based in India that allows reservation of hotels for short stays. I worked as a Product Designer with Pobyt for over 2 years. When I took charge, Pobyt was plagued with inconsistent ux patterns, poor visuals and too much information that caused confusion for its users. Below is a case study that explains the redesign of a specific user flow that allows users to select their duration of stay.</p>
+                                <p>Pobyt is a tech startup based in India that allows reservation of hotels for short stays. I worked as a Product Designer with Pobyt for over 2 years. When I joined the company, Pobyt app was plagued with inconsistent ux patterns, poor visuals and too much information that caused confusion for its users. Below is a case study that explains the redesign of a specific user flow that allows users to select their duration of stay.</p>
 
                                 <div class="view-case">
                                    
