--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
                         
                     </div>
                     <h3 class="protitle">Design systems at Monigle</h3>
-                        <p class="prodesc">Monigle is the country’s largest independent brand agency based in Denver.</p>
+                        <p class="prodesc">My work at Monigle: the country’s largest independent brand agency.</p>
                 </a>
                 </div>
             </div>
