--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                 
             </div>
             <h3 class="protitle">Upwork</h3>
-                <p class="prodesc">A usability evaluation of Upwork's web and mobile applications.</p>
+                <p class="prodesc">A usability evaluation report of Upwork's web and mobile applications.</p>
         </a>
         </div>
         </div>
