--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                             
 
                         </div>
-                        <h3 class="protitle">Apple</h3>
+                        <h3 class="protitle">Apple - SPG</h3>
                             <p class="prodesc">Shaping up Apple's internal tools across iOS, macOS and web platforms.</p>
                             
                     </div>  
