--- a/about.html
+++ b/about.html
@@ -241,7 +241,7 @@ I like solving design problems and creating delightful user experiences through 
                                         <p>CURRENTLY</p>
                                     </div>
                                     <div class="col-lg-10 col-md-4 col-sm-4 col-xs-8">
-                                        <p>• UI/UX Designer at Apple | California</p>
+                                        <p>• Product Designer at Apple | California</p>
                                     </div>
                                 </div>
                             </ul>   
