--- a/about.html
+++ b/about.html
@@ -186,7 +186,7 @@
                                 
                                 <h2>Hello 👋🏻</h2>
                                 <p id="aboutme">
-                                    I’m a Product Designer with 4+ years of experience and a Masters degree in Human-Computer Interaction.
+                                    I’m a Product Designer based in Bay area, California.
 I like solving design problems and creating delightful user experiences through research, quantitative data and my intuition as a designer. I leverage research to design user-centered solutions and experiences that solve both user & business problems. <br/><br/>My process is hands-on, collaborative, and iterative.</p>
                                     <a target="_blank" id="contactinfo" href="https://www.linkedin.com/in/srirampk23/">Linkedin</a> • <a  id="contactinfo1" href="mailto:uxsriram@gmail.com">Email</a> • <a  id="contactinfo1" href="www.linkedin.com/in/srirampk23">+1 704 451 2969</a>
                                
