--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                                     </div>
 									<div class="feature-content">
                                     	<h3 class="feature-title mt-0">Research</h3>
-                                    	<p class="text-sm mb-0">Lorem ipsum dolor sit amet, consecte adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua dui.</p>
+                                    	<p class="text-sm mb-0"></p>
 									</div>
 								</div>
                             </div>
@@ -107,7 +107,7 @@
                                     </div>
 									<div class="feature-content">
                                     	<h3 class="feature-title mt-0">User Experience</h3>
-                                    	<p class="text-sm mb-0">Lorem ipsum dolor sit amet, consecte adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua dui.</p>
+                                    	<p class="text-sm mb-0"></p>
 									</div>
 								</div>
                             </div>
@@ -119,7 +119,7 @@
                                     </div>
 									<div class="feature-content">
                                     	<h3 class="feature-title mt-0">Prototyping</h3>
-                                    	<p class="text-sm mb-0">Lorem ipsum dolor sit amet, consecte adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua dui.</p>
+                                    	<p class="text-sm mb-0"></p>
 									</div>
 								</div>
                             </div>
