--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                     <div class="cta-inner section-inner">
                         <div class="cta-header">
                             <h2 class="hero-title mt-0">Get in touch</h2>
-                            <p class="hero-paragraph">Lorem ipsum is common placeholder text used to demonstrate the graphic elements of a document or visual presentation.</p>
+                            <p class="hero-paragraph">I'm actively seeking new opportunities or side projects to collaborate with. If you have questions about my profile or projects, please contact me via email.</p>
 							<div class="cta-cta">
 								<a class="button button-primary" style="text-transform: none;" href="mailto:hello@srirampk.com">Email me at hello@srirampk.com</a>
 							</div>
