--- a/expiry.html
+++ b/expiry.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="dist/css/style.css">
     <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
 </head>
-<body class="is-boxed has-animations">
+<body class="has-animations">
     <div class="body-wrap boxed-container">
         <header class="site-header">
             <div class="container">
