--- a/work.html
+++ b/work.html
@@ -78,7 +78,7 @@
                                                         <img class="feature" id="imgs" style="border: 1px solid rgba(0,0,0,0.1); border-op width: 100%;" src="assets/images/cover-5.png">
                                                 </a>
                                                 <div class="feature-title mt-0"><b>Untitled Project</b></div>
-                                                <p class="text-sm mb-0" style="margin-right: 25px;">We all know Job Search is difficult. It's surprising to know candidates are still using Whiteboards and Spreadsheets to track their job applications. Here's a tool that I've designed to help candidates apply, track, document and analyze all their applications at one place. </p>
+                                                <p class="text-sm mb-0" style="margin-right: 25px;">We all know Job Search is difficult. It's surprising to know candidates are still using Whiteboards and Spreadsheets to track their job applications. Here's a tool that I designed to help candidates apply, track, document and analyze all their applications at one place. </p>
                                             </div>
     
                                             
