--- a/pobyt.html
+++ b/pobyt.html
@@ -50,7 +50,7 @@
                     <!--text-content-->
                     <div class="text-content">    
                                 <div class="row"> 
-                                    <img class="blog-image" src="assets/images/pobyt-cover.png">
+                                    <img class="blog-image" style="border: 1px solid rgba(0,0,0,0.1); width: 100%; visibility: visible;" src="assets/images/pobyt-cover.png">
                                 </div>
                                 <br/> <br/>
                                 <div class="row">
