--- a/expiry.html
+++ b/expiry.html
@@ -50,7 +50,7 @@
                     <!--text-content-->
                     <div class="text-content">    
                                 <div class="row"> 
-                                    <img class="blog-image" src="assets/images/expiry-cover.png">
+                                    <img class="blog-image" style="border: 1px solid rgba(0,0,0,0.1); width: 100%; visibility: visible;" src="assets/images/expiry-cover.png">
                                 </div>
                                 <br/> 
                                 
