--- a/work.html
+++ b/work.html
@@ -46,7 +46,7 @@
 						<div class="features-header">
 							
 								<h2 class="hero-title mt-0" style="margin-bottom: 60px;">Selected works</h2>
-	                            <p class="hero-paragraph">While most of my recent works are protected by NDA, Below are a couple of design case studies from my past works that were completed more than a year ago. To know more about my recent works, Please drop me an email at <a href="#">hello@srirampk.com</a> </p>
+	                            <p class="hero-paragraph">While most of my recent works are protected by NDA, Below are a couple of design case studies from my past works that were completed recently. To know more about my recent works, Please drop me an email at <a href="#">hello@srirampk.com</a> </p>
                                 <div class="feature-wrap">
                                     
                                     <div class="features-wrap" style="float: left; " >
