--- a/work.html
+++ b/work.html
@@ -66,7 +66,7 @@
                                                     <img id="imgs" style="margin-bottom: 20px; border: 1px solid rgba(0,0,0,0.1); width: 100%;" src="assets/images/cover-7.png">
                                             </a>
                                             <div class="feature-title mt-0"><b>APPLE</b></div>
-                                            <p class="text-sm mt-0">Research, prototyping & design of interactive digital experiences at Apple’s R&D divion - Special Projects Group</p>
+                                            <p class="text-sm mt-0">Research, prototyping & design of interactive digital experiences at Apple’s R&D division - Special Projects Group</p>
                                         </div>     
                                        
                                   </div>  
