--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
                             <h1 class="hero-title mt-90"> Hello,</h1>
                             <h2 class="hero-subtitle mt-0"> I'm a Product Designer based in Palo Alto, CA.</h2>
                             <p class="hero-paragraph">Actively seeking new opportunities to collaborate with amazing teams.</p>
-                            <div class="lights-toggle">
+                            <!--<div class="lights-toggle">
                                 <input id="lights-toggle" type="checkbox" name="lights-toggle" class="switch" checked="checked">
                                 <label for="lights-toggle" class="text-xs"><!--<span><span class="label-text">dark</span></span>--></label>
-                            </div>
+                            </div>-->
 	                        <div class="hero-cta">
 								<!-- <a class="button button-primary" href="#">Buy it now</a> 
 								<div class="lights-toggle">
